# keyboard-auto-type

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  check.sh  format.sh  generate-xcode-project.sh  make.sh  release-notes.md  run.sh  test.sh
.github/workflows/: Lint.yml  Tests.yml  ci.yml
example/: CMakeLists.txt  main.cpp
keyboard-auto-type/: CMakeLists.txt
keyboard-auto-type/include/: key-code.h  keyboard-auto-type.h
keyboard-auto-type/src/: auto-type.cpp  modifier.cpp  utils.cpp  utils.h
keyboard-auto-type/src/darwin/: auto-type-darwin.cpp  carbon-helpers.cpp  carbon-helpers.h  native-methods.h  native-methods.mm
keyboard-auto-type/src/impl/darwin/: auto-release.h  auto-type.cpp  carbon-helpers.cpp  key-map.cpp  key-map.h  native-methods.h  native-methods.mm
keyboard-auto-type/src/impl/linux/: auto-type.cpp  key-map.cpp  x11-helpers.cpp  x11-helpers.h  x11-keysym-map.cpp  x11-keysym-map.h
keyboard-auto-type/src/impl/win32/: auto-type.cpp  key-map.cpp  key-map.h  winapi-tools.cpp  winapi-tools.h
keyboard-auto-type/src/linux/: atspi-helpers.cpp  atspi-helpers.h  auto-type-linux.cpp  auto-type.cpp  key-map.cpp  key-map.h  x11-helpers.cpp  x11-helpers.h  x11-keysym-map.cpp
keyboard-auto-type/src/win32/: auto-type-win32.cpp  key-map.cpp  key-map.h
scripts/: x11-keysyms.js
test/: CMakeLists.txt  main.cpp  platform-util.h
test-keys-app/: index.html  main.js  package-lock.json  package.json  preload.js  start.js
test/impl/: test-util.cpp
test/impl/darwin/: platform-util.cpp
test/impl/linux/: platform-util.cpp
test/impl/win32/: platform-util.cpp
test/include/: test-util.h
test/src/: auto-type-errors-test.cpp  auto-type-keys-test.cpp  auto-type-window-test.cpp  modifier-test.cpp
test/src/utils/: platform-util.h  test-util.cpp  test-util.h
test/src/utils/darwin/: platform-util.cpp
test/src/utils/linux/: platform-util.cpp
test/src/utils/win32/: platform-util.cpp
tests/: CMakeLists.txt  main.cpp
x11-print-layout/: CMakeLists.txt  main.cpp
